python/rregadmin/secdesc/security_descriptor_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.secdesc.sid_wrapper -m rregadmin.secdesc.aclist_wrapper -r ^SecurityDescriptor -r ^secdesc_.* -o security_descriptor_wrapper.py security_descriptor_wrapper.xml'
from ctypes import *

from rregadmin.secdesc.aclist_wrapper import guint16
from rregadmin.util.ustring_list_wrapper import ustring
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.secdesc.aclist_wrapper import guint32
from rregadmin.secdesc.sid_wrapper import Sid
STRING = c_char_p
from rregadmin.secdesc.aclist_wrapper import guint8
from rregadmin.util.glib_wrapper import gsize
from rregadmin.secdesc.aclist_wrapper import gboolean
from rregadmin.secdesc.aclist_wrapper import ACList
from rregadmin.secdesc.aclist_wrapper import GByteArray


secdesc_type = guint16

# values for enumeration 'secdesc_type_code'
SEC_DESC_OWNER_DEFAULTED = 1
SEC_DESC_GROUP_DEFAULTED = 2
SEC_DESC_SERVER_SECURITY = 128
SEC_DESC_DACL_PRESENT = 4
SEC_DESC_DACL_TRUSTED = 64
SEC_DESC_DACL_DEFAULTED = 8
SEC_DESC_DACL_AUTO_INHERIT_REQ = 256
SEC_DESC_DACL_AUTO_INHERITED = 1024
SEC_DESC_DACL_PROTECTED = 4096
SEC_DESC_SACL_PRESENT = 16
SEC_DESC_SACL_DEFAULTED = 32
SEC_DESC_SACL_AUTO_INHERIT_REQ = 512
SEC_DESC_SACL_AUTO_INHERITED = 2048
SEC_DESC_SACL_PROTECTED = 8192
SEC_DESC_RM_CONTROL_VALID = 16384
SEC_DESC_SELF_RELATIVE = 32768
DACL_EXTRA_CODES = 5448
SACL_EXTRA_CODES = 10784
secdesc_type_code = c_int # enum

# values for enumeration 'secdesc_type_vals'
SECDESC_DEFAULT_TYPE = 32768
SECDESC_ERROR_TYPE = 65535
secdesc_type_vals = c_int # enum
# ../../../rregadmin/secdesc/secdesc_type.h 92
secdesc_type_to_ustr = _libraries['librregadmin.so.1'].secdesc_type_to_ustr
secdesc_type_to_ustr.restype = POINTER(ustring)
# secdesc_type_to_ustr(in_type)
secdesc_type_to_ustr.argtypes = [secdesc_type]
secdesc_type_to_ustr.__doc__ = \
"""ustring * secdesc_type_to_ustr(secdesc_type in_type)
../../../rregadmin/secdesc/secdesc_type.h:92"""
# ../../../rregadmin/secdesc/secdesc_type.h 98
secdesc_type_from_ustr = _libraries['librregadmin.so.1'].secdesc_type_from_ustr
secdesc_type_from_ustr.restype = secdesc_type
# secdesc_type_from_ustr(in_ustr)
secdesc_type_from_ustr.argtypes = [POINTER(ustring)]
secdesc_type_from_ustr.__doc__ = \
"""secdesc_type secdesc_type_from_ustr(unknown * in_ustr)
../../../rregadmin/secdesc/secdesc_type.h:98"""

# values for enumeration 'secdesc_rev_code'
SECURITY_DESCRIPTOR_REVISION_1 = 1
secdesc_rev_code = c_int # enum
secdesc_rev = guint16
secdesc_offset = guint32

# values for enumeration 'secdesc_vals'
SECDESC_DEFAULT_REV = 1
SECDESC_ERROR_REV = 65535
secdesc_vals = c_int # enum
# ../../../rregadmin/secdesc/security_descriptor.h 62
class SecurityDescriptor_(Structure):
    pass
SecurityDescriptor = SecurityDescriptor_
# ../../../rregadmin/secdesc/security_descriptor.h 68
secdesc_new = _libraries['librregadmin.so.1'].secdesc_new
secdesc_new.restype = POINTER(SecurityDescriptor)
# secdesc_new()
secdesc_new.argtypes = []
secdesc_new.__doc__ = \
"""SecurityDescriptor * secdesc_new()
../../../rregadmin/secdesc/security_descriptor.h:68"""
# ../../../rregadmin/secdesc/security_descriptor.h 74
secdesc_new_full = _libraries['librregadmin.so.1'].secdesc_new_full
secdesc_new_full.restype = POINTER(SecurityDescriptor)
# secdesc_new_full(in_owner, in_group)
secdesc_new_full.argtypes = [POINTER(Sid), POINTER(Sid)]
secdesc_new_full.__doc__ = \
"""SecurityDescriptor * secdesc_new_full(Sid * in_owner, Sid * in_group)
../../../rregadmin/secdesc/security_descriptor.h:74"""
# ../../../rregadmin/secdesc/security_descriptor.h 82
secdesc_new_parse_sddl = _libraries['librregadmin.so.1'].secdesc_new_parse_sddl
secdesc_new_parse_sddl.restype = POINTER(SecurityDescriptor)
# secdesc_new_parse_sddl(in_str)
secdesc_new_parse_sddl.argtypes = [POINTER(STRING)]
secdesc_new_parse_sddl.__doc__ = \
"""SecurityDescriptor * secdesc_new_parse_sddl(unknown * * in_str)
../../../rregadmin/secdesc/security_descriptor.h:82"""
# ../../../rregadmin/secdesc/security_descriptor.h 90
secdesc_new_parse_sddl_quick = _libraries['librregadmin.so.1'].secdesc_new_parse_sddl_quick
secdesc_new_parse_sddl_quick.restype = POINTER(SecurityDescriptor)
# secdesc_new_parse_sddl_quick(in_str)
secdesc_new_parse_sddl_quick.argtypes = [STRING]
secdesc_new_parse_sddl_quick.__doc__ = \
"""SecurityDescriptor * secdesc_new_parse_sddl_quick(unknown * in_str)
../../../rregadmin/secdesc/security_descriptor.h:90"""
# ../../../rregadmin/secdesc/security_descriptor.h 99
secdesc_new_parse_binary = _libraries['librregadmin.so.1'].secdesc_new_parse_binary
secdesc_new_parse_binary.restype = POINTER(SecurityDescriptor)
# secdesc_new_parse_binary(in_data, in_size)
secdesc_new_parse_binary.argtypes = [POINTER(guint8), POINTER(gsize)]
secdesc_new_parse_binary.__doc__ = \
"""SecurityDescriptor * secdesc_new_parse_binary(unknown * in_data, gsize * in_size)
../../../rregadmin/secdesc/security_descriptor.h:99"""
# ../../../rregadmin/secdesc/security_descriptor.h 105
secdesc_copy = _libraries['librregadmin.so.1'].secdesc_copy
secdesc_copy.restype = POINTER(SecurityDescriptor)
# secdesc_copy(in_sd)
secdesc_copy.argtypes = [POINTER(SecurityDescriptor)]
secdesc_copy.__doc__ = \
"""SecurityDescriptor * secdesc_copy(unknown * in_sd)
../../../rregadmin/secdesc/security_descriptor.h:105"""
# ../../../rregadmin/secdesc/security_descriptor.h 111
secdesc_free = _libraries['librregadmin.so.1'].secdesc_free
secdesc_free.restype = gboolean
# secdesc_free(in_sd)
secdesc_free.argtypes = [POINTER(SecurityDescriptor)]
secdesc_free.__doc__ = \
"""gboolean secdesc_free(SecurityDescriptor * in_sd)
../../../rregadmin/secdesc/security_descriptor.h:111"""
# ../../../rregadmin/secdesc/security_descriptor.h 117
secdesc_get_rev = _libraries['librregadmin.so.1'].secdesc_get_rev
secdesc_get_rev.restype = secdesc_rev
# secdesc_get_rev(in_sd)
secdesc_get_rev.argtypes = [POINTER(SecurityDescriptor)]
secdesc_get_rev.__doc__ = \
"""secdesc_rev secdesc_get_rev(unknown * in_sd)
../../../rregadmin/secdesc/security_descriptor.h:117"""
# ../../../rregadmin/secdesc/security_descriptor.h 123
secdesc_set_rev = _libraries['librregadmin.so.1'].secdesc_set_rev
secdesc_set_rev.restype = gboolean
# secdesc_set_rev(in_sd, in_rev)
secdesc_set_rev.argtypes = [POINTER(SecurityDescriptor), secdesc_rev]
secdesc_set_rev.__doc__ = \
"""gboolean secdesc_set_rev(SecurityDescriptor * in_sd, secdesc_rev in_rev)
../../../rregadmin/secdesc/security_descriptor.h:123"""
# ../../../rregadmin/secdesc/security_descriptor.h 129
secdesc_get_type = _libraries['librregadmin.so.1'].secdesc_get_type
secdesc_get_type.restype = secdesc_type
# secdesc_get_type(in_sd)
secdesc_get_type.argtypes = [POINTER(SecurityDescriptor)]
secdesc_get_type.__doc__ = \
"""secdesc_type secdesc_get_type(unknown * in_sd)
../../../rregadmin/secdesc/security_descriptor.h:129"""
# ../../../rregadmin/secdesc/security_descriptor.h 136
secdesc_has_type_code = _libraries['librregadmin.so.1'].secdesc_has_type_code
secdesc_has_type_code.restype = gboolean
# secdesc_has_type_code(in_sd, in_code)
secdesc_has_type_code.argtypes = [POINTER(SecurityDescriptor), secdesc_type_code]
secdesc_has_type_code.__doc__ = \
"""gboolean secdesc_has_type_code(unknown * in_sd, secdesc_type_code in_code)
../../../rregadmin/secdesc/security_descriptor.h:136"""
# ../../../rregadmin/secdesc/security_descriptor.h 142
secdesc_set_type = _libraries['librregadmin.so.1'].secdesc_set_type
secdesc_set_type.restype = gboolean
# secdesc_set_type(in_sd, in_type)
secdesc_set_type.argtypes = [POINTER(SecurityDescriptor), secdesc_type]
secdesc_set_type.__doc__ = \
"""gboolean secdesc_set_type(SecurityDescriptor * in_sd, secdesc_type in_type)
../../../rregadmin/secdesc/security_descriptor.h:142"""
# ../../../rregadmin/secdesc/security_descriptor.h 149
secdesc_set_type_code = _libraries['librregadmin.so.1'].secdesc_set_type_code
secdesc_set_type_code.restype = gboolean
# secdesc_set_type_code(in_sd, in_code)
secdesc_set_type_code.argtypes = [POINTER(SecurityDescriptor), secdesc_type_code]
secdesc_set_type_code.__doc__ = \
"""gboolean secdesc_set_type_code(SecurityDescriptor * in_sd, secdesc_type_code in_code)
../../../rregadmin/secdesc/security_descriptor.h:149"""
# ../../../rregadmin/secdesc/security_descriptor.h 156
secdesc_unset_type_code = _libraries['librregadmin.so.1'].secdesc_unset_type_code
secdesc_unset_type_code.restype = gboolean
# secdesc_unset_type_code(in_sd, in_code)
secdesc_unset_type_code.argtypes = [POINTER(SecurityDescriptor), secdesc_type_code]
secdesc_unset_type_code.__doc__ = \
"""gboolean secdesc_unset_type_code(SecurityDescriptor * in_sd, secdesc_type_code in_code)
../../../rregadmin/secdesc/security_descriptor.h:156"""
# ../../../rregadmin/secdesc/security_descriptor.h 162
secdesc_get_owner = _libraries['librregadmin.so.1'].secdesc_get_owner
secdesc_get_owner.restype = POINTER(Sid)
# secdesc_get_owner(in_sd)
secdesc_get_owner.argtypes = [POINTER(SecurityDescriptor)]
secdesc_get_owner.__doc__ = \
"""unknown * secdesc_get_owner(unknown * in_sd)
../../../rregadmin/secdesc/security_descriptor.h:162"""
# ../../../rregadmin/secdesc/security_descriptor.h 168
secdesc_set_owner = _libraries['librregadmin.so.1'].secdesc_set_owner
secdesc_set_owner.restype = gboolean
# secdesc_set_owner(in_sd, in_owner)
secdesc_set_owner.argtypes = [POINTER(SecurityDescriptor), POINTER(Sid)]
secdesc_set_owner.__doc__ = \
"""gboolean secdesc_set_owner(SecurityDescriptor * in_sd, Sid * in_owner)
../../../rregadmin/secdesc/security_descriptor.h:168"""
# ../../../rregadmin/secdesc/security_descriptor.h 174
secdesc_get_group = _libraries['librregadmin.so.1'].secdesc_get_group
secdesc_get_group.restype = POINTER(Sid)
# secdesc_get_group(in_sd)
secdesc_get_group.argtypes = [POINTER(SecurityDescriptor)]
secdesc_get_group.__doc__ = \
"""unknown * secdesc_get_group(unknown * in_sd)
../../../rregadmin/secdesc/security_descriptor.h:174"""
# ../../../rregadmin/secdesc/security_descriptor.h 180
secdesc_set_group = _libraries['librregadmin.so.1'].secdesc_set_group
secdesc_set_group.restype = gboolean
# secdesc_set_group(in_sd, in_group)
secdesc_set_group.argtypes = [POINTER(SecurityDescriptor), POINTER(Sid)]
secdesc_set_group.__doc__ = \
"""gboolean secdesc_set_group(SecurityDescriptor * in_sd, Sid * in_group)
../../../rregadmin/secdesc/security_descriptor.h:180"""
# ../../../rregadmin/secdesc/security_descriptor.h 186
secdesc_get_sacl = _libraries['librregadmin.so.1'].secdesc_get_sacl
secdesc_get_sacl.restype = POINTER(ACList)
# secdesc_get_sacl(in_sd)
secdesc_get_sacl.argtypes = [POINTER(SecurityDescriptor)]
secdesc_get_sacl.__doc__ = \
"""ACList * secdesc_get_sacl(SecurityDescriptor * in_sd)
../../../rregadmin/secdesc/security_descriptor.h:186"""
# ../../../rregadmin/secdesc/security_descriptor.h 192
secdesc_get_dacl = _libraries['librregadmin.so.1'].secdesc_get_dacl
secdesc_get_dacl.restype = POINTER(ACList)
# secdesc_get_dacl(in_sd)
secdesc_get_dacl.argtypes = [POINTER(SecurityDescriptor)]
secdesc_get_dacl.__doc__ = \
"""ACList * secdesc_get_dacl(SecurityDescriptor * in_sd)
../../../rregadmin/secdesc/security_descriptor.h:192"""
# ../../../rregadmin/secdesc/security_descriptor.h 199
secdesc_compare = _libraries['librregadmin.so.1'].secdesc_compare
secdesc_compare.restype = c_int
# secdesc_compare(in_sd1, in_sd2)
secdesc_compare.argtypes = [POINTER(SecurityDescriptor), POINTER(SecurityDescriptor)]
secdesc_compare.__doc__ = \
"""int secdesc_compare(unknown * in_sd1, unknown * in_sd2)
../../../rregadmin/secdesc/security_descriptor.h:199"""
# ../../../rregadmin/secdesc/security_descriptor.h 206
secdesc_equal = _libraries['librregadmin.so.1'].secdesc_equal
secdesc_equal.restype = gboolean
# secdesc_equal(in_sd1, in_sd2)
secdesc_equal.argtypes = [POINTER(SecurityDescriptor), POINTER(SecurityDescriptor)]
secdesc_equal.__doc__ = \
"""gboolean secdesc_equal(unknown * in_sd1, unknown * in_sd2)
../../../rregadmin/secdesc/security_descriptor.h:206"""
# ../../../rregadmin/secdesc/security_descriptor.h 213
secdesc_to_binary = _libraries['librregadmin.so.1'].secdesc_to_binary
secdesc_to_binary.restype = POINTER(GByteArray)
# secdesc_to_binary(in_sd, in_block_size)
secdesc_to_binary.argtypes = [POINTER(SecurityDescriptor), c_int]
secdesc_to_binary.__doc__ = \
"""GByteArray * secdesc_to_binary(unknown * in_sd, int in_block_size)
../../../rregadmin/secdesc/security_descriptor.h:213"""
# ../../../rregadmin/secdesc/security_descriptor.h 220
secdesc_write_to_binary = _libraries['librregadmin.so.1'].secdesc_write_to_binary
secdesc_write_to_binary.restype = gboolean
# secdesc_write_to_binary(in_sd, in_arr, in_block_size)
secdesc_write_to_binary.argtypes = [POINTER(SecurityDescriptor), POINTER(GByteArray), c_int]
secdesc_write_to_binary.__doc__ = \
"""gboolean secdesc_write_to_binary(unknown * in_sd, GByteArray * in_arr, int in_block_size)
../../../rregadmin/secdesc/security_descriptor.h:220"""
# ../../../rregadmin/secdesc/security_descriptor.h 226
secdesc_to_sddl = _libraries['librregadmin.so.1'].secdesc_to_sddl
secdesc_to_sddl.restype = STRING
# secdesc_to_sddl(in_sd)
secdesc_to_sddl.argtypes = [POINTER(SecurityDescriptor)]
secdesc_to_sddl.__doc__ = \
"""unknown * secdesc_to_sddl(unknown * in_sd)
../../../rregadmin/secdesc/security_descriptor.h:226"""
# ../../../rregadmin/secdesc/security_descriptor.h 235
secdesc_allocation_count = _libraries['librregadmin.so.1'].secdesc_allocation_count
secdesc_allocation_count.restype = guint32
# secdesc_allocation_count()
secdesc_allocation_count.argtypes = []
secdesc_allocation_count.__doc__ = \
"""guint32 secdesc_allocation_count()
../../../rregadmin/secdesc/security_descriptor.h:235"""
SecurityDescriptor_._fields_ = [
    # ../../../rregadmin/secdesc/security_descriptor.h 62
]
__all__ = ['secdesc_get_rev', 'SEC_DESC_SELF_RELATIVE', 'secdesc_rev',
           'SEC_DESC_SERVER_SECURITY', 'secdesc_get_type',
           'secdesc_set_type', 'secdesc_to_sddl',
           'SEC_DESC_DACL_PROTECTED', 'secdesc_set_owner',
           'secdesc_has_type_code', 'SEC_DESC_SACL_PROTECTED',
           'secdesc_type_vals', 'SEC_DESC_GROUP_DEFAULTED',
           'SEC_DESC_DACL_DEFAULTED', 'secdesc_type_to_ustr',
           'SEC_DESC_DACL_AUTO_INHERIT_REQ',
           'SEC_DESC_SACL_AUTO_INHERIT_REQ',
           'secdesc_new_parse_sddl_quick', 'SecurityDescriptor_',
           'SEC_DESC_DACL_TRUSTED', 'SecurityDescriptor',
           'SEC_DESC_OWNER_DEFAULTED', 'secdesc_new_parse_sddl',
           'secdesc_equal', 'SEC_DESC_SACL_DEFAULTED',
           'secdesc_set_group', 'SECDESC_ERROR_REV',
           'SEC_DESC_DACL_PRESENT', 'secdesc_write_to_binary',
           'secdesc_new', 'secdesc_new_full', 'secdesc_type',
           'SECURITY_DESCRIPTOR_REVISION_1', 'secdesc_set_type_code',
           'secdesc_set_rev', 'SEC_DESC_SACL_PRESENT',
           'secdesc_get_dacl', 'secdesc_copy', 'secdesc_to_binary',
           'secdesc_vals', 'secdesc_type_from_ustr',
           'SECDESC_DEFAULT_REV', 'secdesc_unset_type_code',
           'secdesc_get_group', 'DACL_EXTRA_CODES',
           'secdesc_new_parse_binary', 'secdesc_rev_code',
           'secdesc_compare', 'secdesc_get_owner', 'secdesc_free',
           'secdesc_get_sacl', 'secdesc_type_code',
           'SEC_DESC_SACL_AUTO_INHERITED', 'SECDESC_ERROR_TYPE',
           'SECDESC_DEFAULT_TYPE', 'secdesc_allocation_count',
           'SACL_EXTRA_CODES', 'secdesc_offset',
           'SEC_DESC_DACL_AUTO_INHERITED',
           'SEC_DESC_RM_CONTROL_VALID']
